# My-Starter-Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ENV.json  vcpkg.json
.github/workflows/: build.yml  release.yml
EXEC_example/: CMakeLists.txt
EXEC_example/src/: main.cpp
LIB_example/: CMakeLists.txt
SAMPLES_example/: CMakeLists.txt
scripts/: build_test_and_package-for_remote.ps1  build_test_and_package.ps1  functions.cmake
src/: main.cpp
tests/: test_main.cpp
~scripts/: build_test_and_package.ps1
~vendor/include/suppress-warnings/: literal-conversion  macro-redefined  pop  push  unused-variable  variable-unused  warning-db-rebuild.ps1
~vendor/include/suppress-warnings/groups/: common
~vendor/include/suppress-warnings/helper/: compiler_helper.hpp
